<resources>
    <string name="app_name">Bionatal</string>

    <string name="tab1">Shop</string>
    <string name="tab2">My offer</string>
    <string name="tab3">Free Con</string>
    <string name="tab4">Dvy Status</string>
    <string name="tab5">Support</string>
    <string name="p0head">Officially! The highest level of Thymoquinone (TQ) - 3.56%</string>
    <string name="p0head2">Packing and Shipping details:</string>
    <string name="p0dec">Such high level of TQ is possible due to the following factors: The strongest seeds from the special Ethiopian region are used. Non-filtered oil with 5% of powdered seeds in each container which adds additional TQ. TQ is not burned during the extraction process as BioNatal temperature level is 75-98F.</string>
    <string name="p0dec2">Delivery time is 2-3 days by free FedEx Express OR 2-3 days by USPS Priority Mail in case of shipping for PO BOX holder.</string>
    <string name="p1head">Some of the great unique features of this product:</string>
    <string name="p1dec">BioNatal black seed oil is the most potent oil on the market with Thymoquinone (TQ) level 3.56%. The pureness of the black cumin is 99% (Sortex cleaned method). Coldest pressed way possible with a temperature of 77-87F. One time press. Fresh crop – always fresh. Seeds from a certified sustainable grower in Ethiopia. ADD TO CART NOW, and you’ll fall in love instantly with our pure black seed oil! Improve your body and state of mind with a great health product! This bottle of black seed oil comes in a PETE bottle.</string>
    <string name="p2head">Product Details:</string>
    <string name="p2dec">Black seeds pressed with pure Ethiopian seeds. Black seed oil made from Ethiopian seeds offers: The most potent seeds from unique Ethiopian regions. Non-filtered oil with 5% of powdered seeds in each container which adds additional TQ. Thymoquinone is not burned during the extraction process as BioNatal temperature level is 75-98F.</string>
    <string name="p3head">The best natural oil for the strengthening and growth of hair on Earth:</string>
    <string name="p3dec">Wide leaf ARUGULA seeds from the Egyptian desert Sahara. Seeds are very unique and rare. Seeds from the desert have low quantity of oil but this oil is super concentrated and full of unique minerals. Non-filtered oil (can create on the bottom up to 3% of powdered seeds in each container). The extraction process temperature level is 75-85F</string>
    <string name="p4head">ARUGULA and JOJOBA page in process...</string>
    <string name="p4dec">One of the best oils for the face skin and nutrition for the hair. Jojoba oil is the one of main additives for the most of haircare products and skin creams.</string>
    <string name="p5head">Information about BioNatal natural handmade black seed body lotion: </string>
    <string name="p5dec">Natural handmade lotion With Citrus fragrance and good for all kinds of skin and also great moisturizer for the skin.</string>
    <string name="p6head">BioNatal black seed soap from the Ethiopian seeds and oil contain:</string>
    <string name="p6dec">Ethiopian Nigella Sativa seeds, Powdered Ethiopian Nigella Sativa seeds, Ethiopian black seed oil, Beef fat, Olive oil, Refined rice bran oil, Coconut oil, Castor oil.</string>
<string name="p7dec">Ethiopian Nigella Sativa seeds, Powdered Ethiopian Nigella Sativa seeds. Ethiopian black seed oil, Beef fat, Olive oil, Refined rice bran oil, Coconut oil, Castor oil, Essential oils of Oranges and Mint.</string>
    <string name="p7head">BioNatal black seed soap from the Ethiopian seeds and oil contain:</string>
    <string name="p8head">Product Details:</string>
    <string name="p9head">Product Details:</string>
    <string name="p10head">Product Details:</string>
    <string name="p8dec">Black seed Mask is 100% natural black seed oil sediment. It is a powdered seeds with 30% of oil. APPLY MASK AND RINSE RIGHT AWAY (30 seconds) due to high concentration level of black seeds. Mix it before apply. The mask is very useful for oily skin.</string>
    <string name="p9dec">Very famous Middle East food spice. BioNatal imports Nigella Sativa seeds of 99% purity after SORTEX cleaning. We complete cleaning of the seeds manually in our lab.</string>
    <string name="p10dec">Powdered 100% cleaned Ethiopian seeds of 100% purity in special equipment.</string>
</resources>